--- a/_config.yml
+++ b/_config.yml
@@ -139,7 +139,7 @@ gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into t
 # Color scheme currently only supports "dark", "light"/nil (default), or a custom scheme that you define
 color_scheme: nil
 
-callouts_level: loud # or quiet
+# callouts_level: quiet # or loud
 callouts:
   highlight:
     color: yellow
@@ -180,7 +180,7 @@ compress_html:
 collections:
   # Define a collection named "playbook", its documents reside in the "_playbook" directory
   playbook:
-    permalink: "/:collection/:path/"
+    permalink: "/:path"
     output: true
 
 just_the_docs:
