--- a/_config.yml
+++ b/_config.yml
@@ -137,7 +137,7 @@ gh_edit_branch: "main" # the branch that your docs is served from
 gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
 
 # Color scheme currently only supports "dark", "light"/nil (default), or a custom scheme that you define
-color_scheme: palette
+color_scheme: foo
 
 callouts_level: quiet # or loud
 callouts:
