--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ exclude:
    - README.md
 
 # Set a path/url to a logo that will be displayed instead of the title
-#logo: "/assets/images/just-the-docs.png" ## TODO
+logo: "/assets/images/PHFIC_LogoAlt_Color@3x.png"
 
 # Enable or disable the site search
 # Supports true (default) or false
