--- a/_config.yml
+++ b/_config.yml
@@ -100,6 +100,14 @@ heading_anchors: true
 aux_links:
   "Home":
     - "//phfic.github.io"
+  "About":
+    - "//phfic.github.io/about"
+  "Calendar":
+    - "//phfic.github.io/calendar"
+  "Services":
+    - "//phfic.github.io/#offerings"
+  "Contact":
+    - "//phfic.github.io/contact"
 
 # Makes Aux links open in a new tab. Default is false
 aux_links_new_tab: false
