--- a/_config.yml
+++ b/_config.yml
@@ -52,6 +52,9 @@ exclude:
  # specific to the this website:
    - LICENSE
    - README.md
+   - generate.rb
+   - generate.thor
+   - templates/
 
 # Set a path/url to a logo that will be displayed instead of the title
 logo: "/assets/images/PHFIC_LogoAlt_Color@3x.png"
