--- a/_config.yml
+++ b/_config.yml
@@ -133,7 +133,8 @@ nav_external_links:
 back_to_top: true
 back_to_top_text: "Back to top"
 
-footer_content: "Copyright &copy; 2022 MITRE. Distributed by the <a href=\"https://github.com/PHFIC/playbook/blob/main/LICENSE\">Apache-2 license.</a>"
+# Depreciated - coded into _includes/footer_custom.html
+# footer_content: "Copyright &copy; 2022 MITRE. Distributed by the <a href=\"https://github.com/PHFIC/playbook/blob/main/LICENSE\">Apache-2 license.</a>"
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
